Added search bar and completed biometrics

--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,6 @@
   <meta name="msapplication-tap-highlight" content="no" />
   
   <link rel="icon" type="image/png" href="assets/icon/favicon.png" />
-
   <!-- add to homescreen for ios -->
   <meta name="apple-mobile-web-app-capable" content="yes" />
   <meta name="apple-mobile-web-app-status-bar-style" content="black" />
@@ -24,10 +23,10 @@
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/color-calendar/dist/css/theme-basic.css">
 </head>
 
 <body>
   <app-root></app-root>
 </body>
-
 </html>
