Some small tweak to UI and completed the draft section and notification section.

--- a/src/index.html
+++ b/src/index.html
@@ -27,6 +27,7 @@
 </head>
 
 <body>
-  <app-root></app-root>
+  <app-root id="rootBody"></app-root>
+  <!-- <div id="backdrop"></div> -->
 </body>
 </html>
